--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
+/*General*/
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@900&display=swap');
 
 body{
     font-family: 'Darker Grotesque', sans-serif;
     overflow-x: hidden;
 }
-
+/*home page*/
 .background-coins{
     position: absolute;
     z-index: 1
@@ -79,5 +80,39 @@ body{
 /* Redeemed products page */
 .back-arrow{
     position: absolute;
-
+    z-index: 5;
 }
+.vault{
+    z-index: 4; 
+}
+
+/* loader */
+.lds-circle {
+    display: inline-block;
+    transform: translateZ(1px);
+  }
+  .lds-circle > div {
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    background: #fff;
+    animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  @keyframes lds-circle {
+    0%, 100% {
+      animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+    }
+    0% {
+      transform: rotateY(0deg);
+    }
+    50% {
+      transform: rotateY(1800deg);
+      animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+    }
+    100% {
+      transform: rotateY(3600deg);
+    }
+  }
+  
